<resources>
    <string name="app_name">Doub_window</string>
    <string name="activ_two">Go to Activity Two</string>
    <string name="two_activ">This is Activity Two</string>
    <string name="go_to_activity_three">Go to Activity Three</string>
    <string name="go_to_activity_fourth">Go to Activity Four</string>
    <string name="input_my_text_name">INPUT MY TEXT_NAME</string>
    <string name="activity_name">Activity_Name</string>
    <string name="main_activity">Main Activity</string>
    <string name="this_is_activity_three">This is Activity Three</string>
    <string name="this_is_activity_four">This is Activity Four</string>
    <string name="your_name_is">Your name is</string>
</resources>