<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_main"
        android:orderInCategory="1"
        android:title="@string/main_activity">
    </item>

    <item
        android:id="@+id/menu_second"
        android:orderInCategory="2"
        android:title="@string/activ_two">
    </item>

    <item
        android:id="@+id/menu_third"
        android:orderInCategory="2"
        android:title="@string/go_to_activity_three">
    </item>

    <item
        android:id="@+id/menu_fourth"
        android:orderInCategory="3"
        android:title="@string/go_to_activity_fourth">
    </item>

    <item
        android:id="@+id/menu_name"
        android:orderInCategory="3"
        android:title="@string/activity_name">
    </item>
</menu>