<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnActTwo"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/activ_two">
    </Button>

    <Button
        android:id="@+id/btnActThree"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/go_to_activity_three">
    </Button>

    <Button
        android:id="@+id/btnActFour"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/go_to_activity_fourth">
    </Button>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:id="@+id/etName">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/input_my_text_name"
        android:onClick="onClick"
        android:id="@+id/btnActName">
    </Button>

</LinearLayout>
